[package]
name = "icmptunnel-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34.0"
pnet_sys = "0.34.0"
tun-tap = "0.1.4"
chacha20poly1305 = "0.10.1"
ctrlc = "3.4.0"
clap = { version = "4.3.21", features = ["derive"] }
x25519-dalek = { version = "2.0.0", features = ["reusable_secrets"] }
rand_core = "0.6.4"
sha3 = "0.10.8"
rand = "0.8.5"
